Add GetVolume method to rest interface
